ola-parser/src/testdata/syntaxTests/structs/address_member_declaration.sol
contract C {
    struct S { u256 address; }
}
// ----
// ParserError 2314: (33-40): Expected identifier but got 'address'
